# rust-linter

./: Cargo.toml  README.md
src/: linter.rs  main.rs
src/rules/: complexity.rs  dead_code.rs  mod.rs  naming_conventions.rs  unused_variables.rs
