[package]
name = "rust-linter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A simple code linter for Rust that detects common issues like unused variables and improper naming conventions."
repository = "https://github.com/iamrajhans/rust-linter"

[dependencies]
regex = "1.5"
clap = "4.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "4.2"
rayon = "1.5"
